prevent external link icon from wrapping to next line

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -189,15 +189,20 @@ samp:not([class*="language-"])
 }
 
 /* external links */
-.content-wrapper a[href*='://']:not(.no-external)::before {
+.content-wrapper a[href*='://']:not(.no-external) {
+	padding-right: 1.6rem;
+}
+.content-wrapper a[href*='://']:not(.no-external)::after {
 	content: '\f35d';
 	display: inline-block;
 	font-family: 'Font Awesome 5 Free';
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 900;
-	margin-right: .25rem;
+	margin-left: .4rem;
+	margin-right: -1.8rem;
 	text-rendering: auto;
+	width: 1.8rem;
 }
 
 /* align-items: center */
